@@ -1,3 +1,8 @@
+2003-08-07  Paul Eggert  <eggert@twinsun.com>
+
+	* restrict.m4: New file.
+	* regex.m4 (jm_PREREQ_REGEX): Add gl_C_RESTRICT.
+
 2003-08-07  Bruno Haible  <bruno@clisp.org>
 
 	* getndelim2.m4 (gl_GETNDELIM2): Use AC_LIBOBJ(getndelim2). This makes
