@@ -1,3 +1,9 @@
+2003-08-07 Paul Eggert  <eggert@twinsun.com>
+
+	* modules/restrict: New file.
+	* MODULES.html.sh (func_all_modules): Add restrict.
+	* modules/regex: Depend on restrict.
+	
 2003-08-07  Bruno Haible  <bruno@clisp.org>
 
 	* modules/getndelim2 (Makefile.am): Add the files to EXTRA_DIST, not
